--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,5 +32,5 @@ jobs:
       run: terraform plan -out=tfplan ./terraform
 
     - name: Terraform Apply
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       run: terraform apply -auto-approve tfplan
